--- a/submissions/Westley_Dana/Assignment1/A1.Rmd
+++ b/submissions/Westley_Dana/Assignment1/A1.Rmd
@@ -8,7 +8,7 @@ output: github_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## Part 1: Visualization critique (5 points)
+# Part 1: Visualization critique (5 points)
 
   The visualization I chose was created by John Nelson using data from a partnership between the National Drought Mitigation Center at the University of Nebraska-Lincoln, the USDA, and NOAA studying the duration and severity of droughts in the continental U.S. Here is the link to the map. (https://adventuresinmapping.com/2016/07/12/five-years-of-drought/) I will be discussing the very first image that appears on the page, "Five+Years of Drought"
 	  
@@ -28,14 +28,96 @@ knitr::opts_chunk$set(echo = TRUE)
   Droughts in the U.S. I believe, are getting more severe and longer-lasting than in the past. I think this visualization is fairly enlightening on its own, but it only includes data from the past 5 years. If this visualization was compared side by side with one depicting drought data from 20, 30, or 40 years ago, then I could imagine more use for it in policy, journalism, or popular education in order to "do good with data". 
 
 
-## Part 2: `ggplot2` and the grammar of graphics (10 points)
+# Part 2: `ggplot2` and the grammar of graphics (10 points)
 
 
-My visualization:
-
-```{r df, echo=FALSE}
+My visualization:My visualization:
+``` {r}
+biden <- read.csv("/Users/Dana/Desktop/biden.csv")
 library(ggplot2)
-plot(plot)
+test1 = ggplot(data = biden, aes(x = female, y = biden)) + 
+  geom_point()
+test1
+
+test2 = ggplot(data = biden, aes(x = age, y = biden)) + 
+  geom_point()
+test2
+
+test3 = ggplot(data = biden, aes(x = age, y = biden)) + 
+  geom_smooth(method = lm)
+test3
+
+biden$gender[biden$female == 0] = 0
+biden$gender[biden$female == 1] = 1
+biden$gender = factor(biden$gender, levels = c(0,1), labels = c("Male","Female"))
+
+test4 = ggplot(biden, aes(gender)) + 
+  geom_bar()
+test4
+
+test4 = ggplot(biden, aes(gender)) + 
+  geom_bar()
+test4
+
+test5 = ggplot(biden, aes(age, biden, color = gender)) + 
+  geom_point() +
+  labs(title = "Biden Approval by Age & Gender")
+test5
+
+test6 = ggplot(biden, aes(age, biden, color = gender)) +
+  geom_point(position = "jitter") +
+  labs(title = "Biden Approcal by Age and Gender")
+test6
+
+test7 = ggplot(biden, aes(gender, biden)) + 
+  geom_boxplot() + 
+  labs( title = "Biden Warmness Ranking by Gender")
+test7
+
+biden$warmth[biden$biden <= 24] = 0
+biden$warmth[biden$biden >= 25 & biden$biden <= 49] = 1
+biden$warmth[biden$biden >= 50 & biden$biden <= 74] = 2
+biden$warmth[biden$biden >= 75] = 3
+biden$warmth = factor(biden$warmth, levels = c(0,1,2,3), labels = c("Extremely Cold","Slightly Cold", "Slightly Warm", "Extremely Warm"))
+
+test8 = ggplot(biden, aes(warmth)) + 
+  geom_bar() + 
+  labs(title = "Biden Warmth Counts")
+test8
+
+
+test9 = ggplot(biden, aes(warmth, fill = gender)) + 
+  geom_bar(position = "dodge") + 
+  labs(title = "Biden Warmth Counts")
+test9
+
+biden$party[biden$dem == 0] = 0
+biden$party[biden$dem == 1] = 1
+biden$party = factor(biden$party, levels = c(0,1), labels = c("Republican","Democrat"))
+
+test10 = ggplot(biden, aes(warmth, fill = party)) + 
+  geom_bar(position = "dodge") + 
+  labs(title = "Biden Warmth Counts")
+test10
+
+summary(biden$party)
+
+library(scales)
+test11 <- ggplot(biden, aes(warmth, fill = party)) + 
+ geom_bar(aes(y = (..count..)/sum(..count..)), position = "dodge") + scale_y_continuous(labels=percent) + 
+  labs(title = "Feelings of Warmth Toward Joe Biden by Political Party", y = "Percent", x = "Feelings toward Biden")
+test11
+
+#trying to make it percentage PER PARTY rather than of total respondants
+test12 <- ggplot(biden, aes(warmth, fill = party)) + 
+  geom_bar(if(biden$party == 0) aes(y = (..count..)/1027)) + 
+  geom_bar(if(biden$party == 1) aes(y = (..count..)/780), position = "dodge") + 
+  scale_y_continuous(labels=percent) + 
+  labs(title = "Feelings of Warmth Toward Joe Biden by Political Party", y = "Percent", x = "Feelings toward Biden")
+test12
+
+
 ```
 
-My explanation:
+
+
