--- a/submissions/Westley_Dana/Assignment1/A1.Rmd
+++ b/submissions/Westley_Dana/Assignment1/A1.Rmd
@@ -104,8 +104,7 @@ summary(biden$party)
 
 library(scales)
 test11 <- ggplot(biden, aes(warmth, fill = party)) + 
- geom_bar(aes(y = (..count..)/sum(..count..)), position = "dodge") + scale_y_continuous(labels=percent) + 
-  labs(title = "Feelings of Warmth Toward Joe Biden by Political Party", y = "Percent", x = "Feelings toward Biden")
+ geom_bar(aes(y = (..count..)/sum(..count..)), position = "dodge") + scale_y_continuous(labels=percent) + labs(title = "Feelings of Warmth Toward Joe Biden by Political Party", y = "Percent", x = "Feelings toward Biden")
 test11
 
 #trying to make it percentage PER PARTY rather than of total respondants
@@ -129,8 +128,9 @@ biden %>% count(warmth = factor(warmth), party = factor(party)) %>%
 
 biden %>% count(party = factor(party), warmth = factor(warmth)) %>% 
     mutate(pct = prop.table(n) * 100) %>% 
-    ggplot(aes(x = party, y = n, fill = warmth)) + 
+    ggplot(aes(x = party, y = pct, fill = warmth)) + 
     geom_bar(stat = 'identity', position = 'dodge') + 
+  labs(title = "Feelings of Warmth Toward Joe Biden by Political Party", y = "Count", x = "Political Party") +
     geom_text(aes(y = n + 15,    # nudge above top of bar
                   label = paste0(round(pct, 2), '%')),    # prettify
               position = position_dodge(width = .9), 
@@ -138,7 +138,15 @@ biden %>% count(party = factor(party), warmth = factor(warmth)) %>%
 ```
 
 
-fixing percentages by group (http://stackoverflow.com/revisions/40250493/2)
+
+
+I found the way to scale to percetages from (http://stackoverflow.com/questions/3695497/show-instead-of-counts-in-charts-of-categorical-variables)
+
+fixing percentages by group and adding percent labels found here: (http://stackoverflow.com/revisions/40250493/2)
+
+I also used the ggplot R-Studio cheat sheet from (https://www.rstudio.com/wp-content/uploads/2016/11/ggplot2-cheatsheet-2.1.pdf)
+
+
 
 
 
