--- a/submissions/Westley_Dana/Assignment1/A1.Rmd
+++ b/submissions/Westley_Dana/Assignment1/A1.Rmd
@@ -35,44 +35,6 @@ My visualization:
 ``` {r}
 biden <- read.csv("/Users/Dana/Desktop/biden.csv")
 library(ggplot2)
-test1 = ggplot(data = biden, aes(x = female, y = biden)) + 
-  geom_point()
-test1
-
-test2 = ggplot(data = biden, aes(x = age, y = biden)) + 
-  geom_point()
-test2
-
-test3 = ggplot(data = biden, aes(x = age, y = biden)) + 
-  geom_smooth(method = lm)
-test3
-
-biden$gender[biden$female == 0] = 0
-biden$gender[biden$female == 1] = 1
-biden$gender = factor(biden$gender, levels = c(0,1), labels = c("Male","Female"))
-
-test4 = ggplot(biden, aes(gender)) + 
-  geom_bar()
-test4
-
-test4 = ggplot(biden, aes(gender)) + 
-  geom_bar()
-test4
-
-test5 = ggplot(biden, aes(age, biden, color = gender)) + 
-  geom_point() +
-  labs(title = "Biden Approval by Age & Gender")
-test5
-
-test6 = ggplot(biden, aes(age, biden, color = gender)) +
-  geom_point(position = "jitter") +
-  labs(title = "Biden Approcal by Age and Gender")
-test6
-
-test7 = ggplot(biden, aes(gender, biden)) + 
-  geom_boxplot() + 
-  labs( title = "Biden Warmness Ranking by Gender")
-test7
 
 biden$warmth[biden$biden <= 24] = 0
 biden$warmth[biden$biden >= 25 & biden$biden <= 49] = 1
@@ -80,57 +42,21 @@ biden$warmth[biden$biden >= 50 & biden$biden <= 74] = 2
 biden$warmth[biden$biden >= 75] = 3
 biden$warmth = factor(biden$warmth, levels = c(0,1,2,3), labels = c("Extremely Cold","Slightly Cold", "Slightly Warm", "Extremely Warm"))
 
-test8 = ggplot(biden, aes(warmth)) + 
-  geom_bar() + 
-  labs(title = "Biden Warmth Counts")
-test8
-
-
-test9 = ggplot(biden, aes(warmth, fill = gender)) + 
-  geom_bar(position = "dodge") + 
-  labs(title = "Biden Warmth Counts")
-test9
 
 biden$party[biden$dem == 0] = 0
 biden$party[biden$dem == 1] = 1
 biden$party = factor(biden$party, levels = c(0,1), labels = c("Republican","Democrat"))
 
-test10 = ggplot(biden, aes(warmth, fill = party)) + 
-  geom_bar(position = "dodge") + 
-  labs(title = "Biden Warmth Counts")
-test10
-
-summary(biden$party)
-
-library(scales)
-test11 <- ggplot(biden, aes(warmth, fill = party)) + 
- geom_bar(aes(y = (..count..)/sum(..count..)), position = "dodge") + scale_y_continuous(labels=percent) + labs(title = "Feelings of Warmth Toward Joe Biden by Political Party", y = "Percent", x = "Feelings toward Biden")
-test11
-
-#trying to make it percentage PER PARTY rather than of total respondants
-#test12 <- ggplot(biden, aes(warmth, fill = party)) + 
- # geom_bar(if(biden$party == 0) aes(y = (..count..)/1027)) + 
-  #geom_bar(if(biden$party == 1) aes(y = (..count..)/780), position = "dodge") + 
-  #scale_y_continuous(labels=percent) + 
-  #labs(title = "Feelings of Warmth Toward Joe Biden by Political Party", y = #"Percent", x = "Feelings toward Biden")
-#test12
 
 library(dplyr)
-biden %>% count(warmth = factor(warmth), party = factor(party)) %>% 
-    mutate(pct = prop.table(n) * 100) %>% 
-    ggplot(aes(x = warmth, y = n, fill = party)) + 
-    geom_bar(stat = 'identity', position = 'dodge') + 
-    geom_text(aes(y = n + .2,    # nudge above top of bar
-                  label = paste0(round(pct, 2), '%')),    # prettify
-              position = position_dodge(width = .9), 
-              size = 3)
-
+library(RColorBrewer)
 
 biden %>% count(party = factor(party), warmth = factor(warmth)) %>% 
     mutate(pct = prop.table(n) * 100) %>% 
     ggplot(aes(x = party, y = pct, fill = warmth)) + 
     geom_bar(stat = 'identity', position = 'dodge') + 
-  labs(title = "Feelings of Warmth Toward Joe Biden by Political Party", y = "Count", x = "Political Party") +
+  labs(title = "Feelings of Warmth Toward Joe Biden by Political Party", y = "Percent", x = "Political Party") +
+  scale_fill_brewer(palette = "YlOrRd") + 
     geom_text(aes(y = pct + 1,    # nudge above top of bar
                   label = paste0(round(pct, 2), '%')),    # prettify
               position = position_dodge(width = .9), 
