github_document format

--- a/submissions/kim_soowan/Assignment 1/biden_viz.Rmd
+++ b/submissions/kim_soowan/Assignment 1/biden_viz.Rmd
@@ -2,7 +2,7 @@
 title: "Biden Visualization"
 author: "Soo Wan Kim"
 date: "April 8, 2017"
-output: html_document
+output: github_document
 ---
 
 ```{r setup, include=FALSE}
