alternative graph formats

--- a/submissions/kim_soowan/Assignment 1/biden_viz.Rmd
+++ b/submissions/kim_soowan/Assignment 1/biden_viz.Rmd
@@ -90,6 +90,8 @@ I chose to make a point and line chart with multiple trend lines corresponding t
 
 Faceting by gender or party identification could have made for a clearer visualization if there were more noise or overlapping lines across groups, but with the transformation I used the trends were cleanly separated such that faceting was not necessary. In fact, with this format the relative positions of the trend lines along the y-axis are easier to interpret because the lines are directly above or below each other rather than placed side by side in different panels. 
 
+Alternative plot formats considered were the box plot and the violin plot. Admittedly, this is subjective, but box plots look too clinical in my opinion, and violin plots are too distracting with their interesting and suggestive shapes (much like Rorschach ink blots). In any case, the point and line plot is a better format for directly comparing relative positions along an axis. In box plots, separate boxes are placed next to each other rather than above or below each other, and so the viewer needs to evaluate both the vertical distance and the horizonal distance. Violin plots have the same issue.
+
 ### Color and line type
 
 I chose the line colors according to colors popularly associated with each political party - blue for Democrats and red for Republicans. This color scheme makes interpreting the graph more intuitive for anyone familiar with American politics. I chose green for Independents simply because the color contrasts well with the light background and is easily distinguishable from both blue and red. Line type distinguishes male groups from female groups (e.g. male Democrats from female Democrats). Using solid and slashed lines provides enough contrast such that one can look at the graph and quickly distinguish between the gender groups. It also does not excessively divert attention to one group over another, such as if I used line thickness to distinguish between men and women. 
