--- a/submissions/kim_soowan/Assignment 1/biden_viz.Rmd
+++ b/submissions/kim_soowan/Assignment 1/biden_viz.Rmd
@@ -90,7 +90,7 @@ I chose to make a point and line chart with multiple trend lines corresponding t
 
 Faceting by gender or party identification could have made for a clearer visualization if there were more noise or overlapping lines across groups, but with the transformation I used the trends were cleanly separated such that faceting was not necessary. In fact, with this format the relative positions of the trend lines along the y-axis are easier to interpret because the lines are directly above or below each other rather than placed side by side in different panels. 
 
-Alternative plot formats considered were the box plot and the violin plot. Admittedly, this is subjective, but box plots look too clinical in my opinion, and violin plots are too distracting with their interesting and suggestive shapes (much like Rorschach ink blots). In any case, the point and line plot is a better format for directly comparing relative positions along an axis. In box plots, separate boxes are placed next to each other rather than above or below each other, and so the viewer needs to evaluate both the vertical distance and the horizontal distance. Violin plots have the same issue.
+Alternative plot formats considered were the box plot and the violin plot. Admittedly, this is subjective, but box plots look too clinical and "academic" for a lay audience in my opinion, and violin plots distract from the visualization's story with their interesting and suggestive shapes (much like Rorschach ink blots). In any case, the point and line plot is a better format for directly comparing relative positions along an axis. In box plots, separate boxes are placed next to each other rather than above or below each other, and so the viewer needs to evaluate both the vertical distance and the horizontal distance. Violin plots have the same issue.
 
 ### Color and line type
 
