--- a/submissions/longxuan_wang/HW_01/Biden.Rmd
+++ b/submissions/longxuan_wang/HW_01/Biden.Rmd
@@ -15,15 +15,25 @@ library(dplyr)
 
 ```{r csv}
 biden <- read_csv("C:/Users/Longxuan/Downloads/Git HW/dataviz/assignments/data/biden.csv")
-biden%>%
+
+biden_sum <- biden%>%
   mutate(party=dem*2+rep)%>%
-  ggplot(aes(x=as.factor(female), y=biden, fill=as.factor(party)))+
-  geom_bar(stat = "summary", fun.y = "mean", position = position_dodge())+
+  group_by(female, party)%>%
+  summarise(mean=mean(biden), sd=sd(biden), n=n())%>%
+  mutate(CI=sd/sqrt(n)*1.96)
+  
+
+biden_sum%>%
+  ggplot(aes(x=as.factor(female), y=mean, fill=as.factor(party)))+
+  geom_bar(stat = "identity",position = position_dodge())+
   scale_x_discrete(breaks=c(0,1), labels=c("Male", "Female"))+
   scale_fill_discrete("Party affiliation",breaks=c(0,1,2), labels=c("Independent", "Republican", "Democrat"))+
   xlab("Gender")+
   ylab("Rating")+
-  ggtitle("Feeling of warmth towards Biden by gender and party affiliation")
+  ggtitle("Feeling of warmth towards Biden by gender and party affiliation")+
+  geom_errorbar(aes(ymax=mean+CI, ymin=mean-CI), position=position_dodge(0.9), size=1, width=0.4)
+
+  #stat_summary(fun.data = mean_cl_normal, geom = "errorbar")
 ```
 
 ## Explanation
